# pacseen

./: Cargo.toml  README.md  sess.vim  test_alpm.rs
src/: main.rs  test.rs
src/backend/: aur.rs  mod.rs
src/objects/: stat.rs
src/ui/: mod.rs
