[package]
name = "al_pacseek"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm.workspace = true
alpm = "*"
ratatui.workspace = true
color-eyre.workspace = true
aur = "~0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
[profile.dev]
debug = true
